[package]
name = "rust-graphql-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11" ##server
diesel = { version = "1.4.4", features = ["postgres"] } #orm
dotenv = "0.15.0" 
env_logger = "0.9.0"
futures = "0.3.21"
juniper = "0.15.10" # graphql server library
serde = { version = "1.0.142", features = ["derive"] }  # deserializing inputs
serde_json = "1.0.83" 
rocket_contrib = { version = "0.4.11", features = ["helmet", "json", "uuid"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
